[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/ui/HerbMixingUI.gd" id="1_logic"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.07, 0.1, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 10
shadow_offset = Vector2(0, 5)

[node name="HerbMixingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_logic")

[node name="BackgroundDim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(320, 240)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/MainPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 1, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Ritual Distillation"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CenterContainer/MainPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Combine base herbs to recover lost resonances."
horizontal_alignment = 1

[node name="HerbGrid" type="GridContainer" parent="CenterContainer/MainPanel/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 2

[node name="SelectedHBox" type="VBoxContainer" parent="CenterContainer/MainPanel/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainPanel/VBox/SelectedHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Selected for Mixing:"

[node name="SelectedList" type="HBoxContainer" parent="CenterContainer/MainPanel/VBox/SelectedHBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 1

[node name="ResultLabel" type="Label" parent="CenterContainer/MainPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Select two herbs..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/MainPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ClearButton" type="Button" parent="CenterContainer/MainPanel/VBox/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Clear"

[node name="MixButton" type="Button" parent="CenterContainer/MainPanel/VBox/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 0.6, 1)
text = "Distill"

[node name="CloseButton" type="Button" parent="CenterContainer/MainPanel/VBox/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Close"

[connection signal="pressed" from="CenterContainer/MainPanel/VBox/Buttons/ClearButton" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/VBox/Buttons/MixButton" to="." method="_on_mix_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/VBox/Buttons/CloseButton" to="." method="_on_close_pressed"]
